# capability-agent

./: .gitignore  CLAUDE.md  DESCRIPTION.md  PLAN.md  README.md  enhanced_model.json  pyproject.toml  test_fix.json  test_output.json
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: responses-api.md  responses.md  structured-output.md
examples/: model.json  prompt.j2  system.txt
src/capability_agent/: __init__.py  cli.py  io_utils.py  llm.py  models.py  prompting.py  service.py  wrench.py
tests/: test_logging_transport.py  test_service_restart.py
