[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capability-agent"
version = "0.1.0"
description = "Business capability model augmenter CLI (business-capgen) using OpenAI, Typer, Jinja2, Pydantic, and Rich"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["cli", "openai", "business", "capabilities", "generator", "jinja2", "typer", "pydantic", "rich"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Utilities"
]

# Runtime deps are intentionally lenient here; lock with a tool like uv/poetry if desired.
dependencies = [
  "openai>=1.40.0",
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "rich>=13.0.0",
  "pydantic>=2.4.0",
]

[project.scripts]
business-capgen = "capability_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["capability_agent*"]

[tool.ruff]
line-length = 100

[tool.pyproject-fmt]
max_supported_python = "3.12"
